src/ui/lidarr_ui/system/snapshots/managarr__ui__lidarr_ui__system__system_ui_tests__tests__snapshot_tests__popups_over_system_ui_SystemUpdates.snap
---
source: src/ui/lidarr_ui/system/system_ui_tests.rs
expression: output
---
╭  Tasks  ────────────────────────────────────────────────────────────────────────╮╭  Queued Events  ───────────────────────────────────────────────────────────────╮
│Name                   Interval            Last Execution     Next Execution     ││Trigger    Status      Name                Queued        Started     Duration   │
│Backup                 1 hour              now                59 minutes         ││manual     completed   Refresh Monitored D 4 minutes ago 4 minutes a 00:03:03   │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                   ╭  Updates  ───────────────────────────────────────────────────────────────────────────────────────────────────────────────╮                    │
│                   │The latest version of Sonarr is already installed                                                                         │                    │
│                   │                                                                                                                          │                    │
│                   │4.3.2.1 - 2023-04-15 02:02:53 UTC (Currently Installed)                                                                   │                    │
│                   │--------------------------------------------------------------------------------------------------------------------------│                    │
│                   │New:                                                                                                                      │                    │
│                   │  * Cool new thing                                                                                                        │                    │
│                   │Fixed:                                                                                                                    │                    │
│                   │  * Some bugs killed                                                                                                      │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │3.2.1.0 - 2023-04-15 02:02:53 UTC (Previously Installed)                                                                  │                    │
│                   │--------------------------------------------------------------------------------------------------------------------------│                    │
│                   │New:                                                                                                                      │                    │
│                   │  * Cool new thing (old)                                                                                                  │                    │
│                   │  * Other cool new thing (old)                                                                                            │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
╰───────────────────│2.1.0 - 2023-04-15 02:02:53 UTC                                                                                           │────────────────────╯
╭  Logs  ───────────│--------------------------------------------------------------------------------------------------------------------------│────────────────────╮
│2025-12-16 16:40:59│Fixed:                                                                                                                    │                    │
│                   │  * Killed bug 1                                                                                                          │                    │
│                   │  * Fixed bug 2                                                                                                           │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   │                                                                                                                          │                    │
│                   ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯                    │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
