src/ui/lidarr_ui/system/snapshots/managarr__ui__lidarr_ui__system__system_ui_tests__tests__snapshot_tests__system_ui_renders_logs_loading.snap
---
source: src/ui/lidarr_ui/system/system_ui_tests.rs
expression: output
---
╭  Tasks  ────────────────────────────────────────────────────────────────────────╮╭  Queued Events  ───────────────────────────────────────────────────────────────╮
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│ Loading ...                                                                     ││ Loading ...                                                                    │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
│                                                                                 ││                                                                                │
╰─────────────────────────────────────────────────────────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────────╯
╭  Logs  ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│ Loading ...                                                                                                                                                       │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
│                                                                                                                                                                   │
╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
